<resources>
    <string name="app_name">Android_week1</string>

    <string name="login_text">로그인</string>
    <string name="name_text">이름</string>
    <string name="id_text">이메일</string>
    <string name="password_text">비밀번호</string>
    <string name="signup_notyet_text">계정이 없으신가요?</string>
    <string name="signup_text">회원가입</string>
    <string name="et_name">이름을 입력해주세요</string>
    <string name="et_id">이메일을 입력해주세요</string>
    <string name="et_password">비밀번호를 입력해주세요</string>

    <string name="tv_title">SOPTHub</string>
    <string name="home_tv_name_text">이름</string>
    <string name="home_tv_age_text">나이</string>
    <string name="home_tv_mbti_text">mbti</string>
    <string name="profile_tv_name">Yubin Choi</string>
    <string name="profile_tv_id">yubinquitous</string>
    <string name="profile_tv_introduction">안녕하세용</string>
    <!--    <string name="home_tv_intro">안녕하세요 안드 yb 최유빈입니다!\n2001년생이고 빠른 년생이라 3학년입니당.\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱\nSOPT 짱\n안드로이드 짱</string>-->
    <string name="profile_bt_follower">팔로워 목록</string>
    <string name="profile_bt_repo">레포지토리 목록</string>

    <string name="menu_profile">프로필</string>
    <string name="menu_home">홈</string>
    <string name="menu_camera">카메라</string>

    <string name="detail_name_text">이름: </string>
    <string name="detail_text">상세 소개</string>

    <string name="detail1">안드로이드 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>
    <string name="detail2">기획 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>
    <string name="detail3">디자인 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>
    <string name="detail4">ios 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>
    <string name="detail5">웹 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>
    <string name="detail6">서버 파트장 상세 설명 ~~~\n어쩌구 ~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~\n~~~~~~~~~~</string>

    <string name="home_github_text">GitHub</string>
    <string name="home_tab_text">준비중입니다</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>