<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInActivity">

    <View
        android:id="@+id/img_github"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/img_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/noto_sans_kr"
        android:includeFontPadding="false"
        android:text="@string/id_text"
        android:textColor="@color/sopt_gray1"
        android:textFontWeight="700"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_github" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/signin_et_bg"
        android:hint="@string/et_id"
        android:includeFontPadding="false"
        android:inputType="textPersonName"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/password_text"
        android:textColor="@color/sopt_gray1"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="@id/tv_id"
        app:layout_constraintTop_toBottomOf="@id/et_id" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/signin_et_bg"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textSize="14sp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        app:layout_constraintLeft_toLeftOf="@id/et_id"
        app:layout_constraintRight_toRightOf="@id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <Button
        android:id="@+id/bt_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:background="@drawable/signin_bt_pink_bg"
        android:paddingVertical="12dp"
        android:text="@string/login_text"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_id"
        app:layout_constraintRight_toRightOf="@id/et_id" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login">

        <TextView
            android:id="@+id/tv_sign_up_notyet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_notyet_text"
            android:textSize="12sp"
            android:textColor="@color/sopt_gray3"
            android:fontFamily="@font/noto_sans_kr"
            android:textFontWeight="400"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/signup_text"
            android:textSize="12sp"
            android:textColor="@color/sopt_gray3"
            android:fontFamily="@font/noto_sans_kr"
            android:textFontWeight="700"
            android:includeFontPadding="false"
            app:layout_constraintStart_toEndOf="@id/tv_sign_up_notyet"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>