<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".follower.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_pinkpop"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_setting_2_white"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/profile"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/noto_sans_kr"
            android:includeFontPadding="false"
            android:text="@string/profile_tv_name"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr"
            android:includeFontPadding="false"
            android:text="@string/profile_tv_id"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_id">

            <View
                android:id="@+id/view_introduction"
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:background="@color/white"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toTopOf="@id/tv_introduction"
                app:layout_constraintBottom_toBottomOf="@id/tv_introduction"
                app:layout_constraintEnd_toStartOf="@id/tv_introduction"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/noto_sans_kr"
                android:includeFontPadding="false"
                android:text="@string/profile_tv_introduction"
                android:textColor="@color/white"
                android:textFontWeight="500"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_introduction"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_follower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_bt_bg"
        android:text="@string/profile_bt_follower"
        android:fontFamily="@font/noto_sans_kr"
        android:includeFontPadding="false"
        android:textColor="@color/selector_profile_bt_text"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:padding="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        app:layout_constraintTop_toBottomOf="@id/cl_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_bt" />

    <View
        android:id="@+id/view_bt"
        android:layout_width="15dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/bt_follower"
        app:layout_constraintBottom_toBottomOf="@id/bt_follower"
        app:layout_constraintStart_toEndOf="@id/bt_follower"
        app:layout_constraintEnd_toStartOf="@id/bt_repository" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_bt_bg"
        android:text="@string/profile_bt_repo"
        android:fontFamily="@font/noto_sans_kr"
        android:includeFontPadding="false"
        android:textColor="@color/selector_profile_bt_text"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:padding="13dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintTop_toTopOf="@id/bt_follower"
        app:layout_constraintStart_toEndOf="@id/view_bt"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout="@layout/fragment_follower"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bt_follower"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>