<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.follower.DetailActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tv_title"
        android:textColor="@color/main_pinkpower"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/memo_2"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/cl_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/tv_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_name_text"
            android:textSize="20sp"
            android:textColor="@color/sopt_gray1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="최유빈"
            android:textSize="20sp"
            android:textColor="@color/sopt_gray1"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name_text"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_text"
        android:textSize="18sp"
        android:textColor="@color/sopt_gray1"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/cl_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="25dp"
        android:padding="30dp"
        tools:text="상세 설명~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~"
        android:textSize="18sp"
        android:textColor="@color/sopt_gray1"
        android:background="@drawable/item_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_text"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>